Kubernetes/elasticsearch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
        # resources:
        #   limits:
        #     memory: 1Gi
        #     cpu: 1500m
        ports:
        - containerPort: 9200
