Kubernetes/elasticsearch/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elsaticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
